# backtest

./: .gitignore  README.md  README.vol-dashboard.md  hols.xlsx  nifty_front_expiry_raw_extract.csv  portfolio_hedges.csv  portfolio_options_pv.csv  pyproject.toml  pyproject.vol-dashboard.toml
.batch_smoke_expiry_only/: 20260101_SENSEX.csv  20260106_NIFTY.csv  20260108_SENSEX.csv
.batch_smoke_processed/: 20260101_NIFTY.csv
backtest_snapshots/: nifty_20251216.csv  nifty_20260113.csv  nifty_20260127.csv  nifty_20260203.csv  nifty_20260210.csv  nifty_20260217.csv  nifty_20260224.csv  nifty_20260302.csv  nifty_20260310.csv  nifty_20260317.csv  nifty_20260324.csv  nifty_20260330.csv  nifty_20260407.csv  nifty_20260413.csv  nifty_20260421.csv  nifty_20260428.csv  nifty_20260512.csv  sensex_20260108.csv  sensex_20260402.csv  sensex_20260430.csv
snapshots/: nifty_20240905.csv  nifty_20240912.csv  nifty_20240919.csv  nifty_20240926.csv  nifty_20241003.csv  nifty_20241010.csv  nifty_20241017.csv  nifty_20241024.csv  nifty_20241031.csv  nifty_20241107.csv  nifty_20241114.csv  nifty_20241121.csv  nifty_20241205.csv  nifty_20241212.csv  nifty_20241219.csv  nifty_20241226.csv  nifty_20250102.csv  nifty_20250109.csv  nifty_20250116.csv  nifty_20250123.csv  nifty_20250130.csv  nifty_20250206.csv  nifty_20250213.csv  nifty_20250220.csv  nifty_20250227.csv  nifty_20250306.csv  nifty_20250313.csv  nifty_20250320.csv  nifty_20250327.csv  nifty_20250403.csv  nifty_20250409.csv  nifty_20250417.csv  nifty_20250424.csv  nifty_20250430.csv  nifty_20250508.csv  nifty_20250515.csv  (+139 more)
(+36 files in other folders)
